<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText android:hint="@string/h_produto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cadastro_produto_nome" />

        <EditText android:hint="@string/h_qtd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/cadastro_produto_qtd"/>

        <EditText android:hint="@string/h_valor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/cadastro_produto_valor"/>

        <Button
            android:text="@string/btn_add_produto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_add_produto"/>
    </LinearLayout>
</ScrollView>