<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/data_compra"
        android:textSize="25dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CalendarView
        android:id="@+id/cadastro_compra_calendario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/cadastro_compra_local"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/h_local_compra" />

    <Button
        android:id="@+id/cadastro_compra_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_compra" />
</LinearLayout>