<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_busca_data1"
            android:textSize="18sp"
            android:textAlignment="center"/>

        <CalendarView
            android:id="@+id/busca_data_inicial"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_busca_data2"
            android:textSize="18sp"
            android:textAlignment="center"/>

        <CalendarView
            android:id="@+id/busca_data_final"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/busca_local"
                android:layout_width="299dp"
                android:layout_height="wrap_content"
                android:hint="@string/h_local_compra" />

            <Button
                android:id="@+id/busca_buscar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/btn_busca" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>